--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="counter-div" class="col-4 mx-auto alignment">Total Tasks:<span id="counter"> 0</span></div>
         <ul id="taskList" class="row col-10 col-lg-6 mx-auto justify-content-center alignment p-3">
             <!-- Input Task List -->
-            <li class="input-group mb-3">
+            <!-- <li class="input-group mb-3">
                 <div class="input-group-text">
                   <input class="form-check-input mt-0 checkbx" type="checkbox" value="" aria-label="Checkbox for following text input">
                 </div>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-control alignment2 task-field bodyCheck" data-id="2"><span>2</span>.&nbsp;<span class="task-text">Demo HomeWork</span><img class="trash trashIcon" alt="trash" src="res/trash-can-regular.svg" data-id=2></div>
             </li>
-                            
+                             -->
         </ul>
         <!-- toast -->
         <div id="toastBox">
