cleaned up the code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TO-D0 App</title>
+    <title>TO-DO App</title>
+    <link rel="shortcut icon" type="image/x-icon" href="res/task.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/41360df9ef.js" crossorigin="anonymous"></script>
@@ -33,8 +34,7 @@
                   <input class="form-check-input mt-0 checkbx" type="checkbox" value="" aria-label="Checkbox for following text input" checked>
                 </div>
                 <div class="form-control alignment2 task-field bodyCheck" data-id="2"><span>2</span>.&nbsp;<span class="task-text">Demo HomeWork</span><img class="trash trashIcon" alt="trash" src="res/trash-can-regular.svg" data-id=2></div>
-            </li>
-                             -->
+            </li> -->
         </ul>
         <!-- toast -->
         <div id="toastBox">
