Made flexible for Moblie Device
Signed-off-by: adarshrajpathak <adarsh.raj.pathak.1@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="row col-12 mx-auto justify-content-center alignment my-3">TO-DO WebApp</h1>
     <main class="container alignment">
-        <div id="taskItem" class="row col-8 col-lg-5 mx-auto justify-content-center alignment my-2 p-3">
+        <div id="taskItem" class="row col-sm-10 col-lg-8 col-xl-5 mx-auto justify-content-center alignment my-2 p-3">
             <!-- Input Task Item -->
             <div class="input-group mb-3">
                 <input id="taskInput" type="text" class="form-control" placeholder="Add Your Task" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -21,7 +21,7 @@
               
         </div>
         <div id="counter-div" class="col-4 mx-auto alignment">Total Tasks:<span id="counter"> 0</span></div>
-        <ul id="taskList" class="row col-10 col-lg-6 mx-auto justify-content-center alignment p-3">
+        <ul id="taskList" class="row col-12 col-lg-10 col-xl-6 mx-auto justify-content-center alignment p-3">
             <!-- Input Task List -->
             <!-- <li class="input-group mb-3">
                 <div class="input-group-text">
